fix nav bar alignment

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -64,6 +64,7 @@
           display: flex;
           flex-direction: column;
           height: 300px;
+          margin-top: 2px;
           position: absolute;
           right: 362px;
 
@@ -116,6 +117,7 @@
         }
 
         & .NavItems {
+          align-items: center;
           display: flex;
           flex-direction: row;
 
